[package]
name = "amq-proto"
version = "0.1.0"
authors = ["Andrii Dmytrenko <refresh.xss@gmail.com>"]
description = "AMQP/RabbitMQ protocol implementation"
repository = "https://github.com/Antti/rust-amq-proto"
license = "MIT/Apache-2.0"
keywords = ["amqp", "rabbitmq", "queue"]
readme = "Readme.md"

[dependencies]
bit-vec = "0.4"
byteorder = "0.5"
enum_primitive = "0.1"
env_logger = "0.3"
log = "0.3"
error-chain = "0.10"
